@startuml class
left to right direction

class User {
  + id : String {PK}
  + name : String
  + about : String
  + passwd : LargeBinary
}

class Course {
  + prefix : String {PK}
  + number : String {PK}
  + name : String
  + credits : Integer
}

class Enrollment {
  + user_id : String {PK, FK}
  + course_prefix : String {PK, FK}
  + course_number : String {PK, FK}
  + grade : String
}

User "1" -- "0..*" Enrollment : has >
Course "1" -- "0..*" Enrollment : graded in >
@enduml